fixed scrollbar and added documents

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@
 }
 
 .overflow-item {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -63,11 +63,6 @@
 
 .pink-border-bottom {
     border-bottom: 1px solid #ff69b4;
-}
-
-.left-col {
-    /*margin: 5px 0;*/
-    /*border: 1px solid #ff69b4*/
 }
 
 .row-margin {
